@@ -4,6 +4,7 @@
 
 #include <socket/socket_helpers.hpp>
 //#include <nsca/nsca_packet.hpp>
+#include <iostream>
 
 using boost::asio::ip::tcp;
 
